[package]
name = "curve-fever-wasm"
version = "0.1.0"
authors = ["tfachmann <fachmanntj@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
arrayvec = { version = "0.7", features = ["serde"] }
wasm-bindgen = "^0.2"
js-sys = "^0.3"
lazy_static = "^1.4"
rand = "0.8"
bincode = "1.3"
instant = { version = "0.1", features= [ "wasm-bindgen", "inaccurate" ] }
curve-fever-common = { path = "../curve_fever_common" }
num-traits = "^0.2"
uuid = "0.8"

[dependencies.getrandom]
version="0.2"
features = ["js"]

[dependencies.web-sys]
version = "^0.3"
features = [
  'Blob',
  'console',
  'Document',
  'DomTokenList',
  'Element',
  'EventTarget',
  'FileReader',
  'HtmlCollection',
  'HtmlElement',
  'HtmlButtonElement',
  'HtmlInputElement',
  'InputEvent',
  'KeyboardEvent',
  'Location',
  'MessageEvent',
  'Node',
  'NodeList',
  'ProgressEvent',
  'SvgElement',
  'SvgGraphicsElement',
  'Text',
  'TouchEvent',
  'WebSocket',
  'Window',
  'HtmlCanvasElement',
  'CanvasRenderingContext2d'
]
