[package]
name = "curve-fever-server"
version = "0.1.0"
authors = ["tfachmann <fachmanntj@gmail.com>"]
edition = "2018"


[dependencies]
anyhow = "1.0"
num_cpus = "1.13"
rand = "0.8"
smol = "0.1.4"
log = "0.4"
env_logger = "0.7"
async-tungstenite="0.13"
futures = "0.3"
bincode = "1.3"
curve-fever-common = { path = "../curve_fever_common" }
serde = { version = "1.0.124", features = ["derive"] }
serde_derive = "1.0.124"
thiserror = "1.0"
chrono = {version = "0.4", features = ["serde"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
